@@ -1,19 +1,17 @@
 package jp.co.project.planets.earthly.webapp.security.handler;
 
 import java.io.IOException;
-import java.util.Optional;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.web.authentication.AuthenticationSuccessHandler;
-import org.springframework.security.web.savedrequest.DefaultSavedRequest;
-import org.springframework.web.util.UriComponentsBuilder;
 
 import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import jp.co.project.planets.earthly.webapp.security.dto.EarthlyUserInfoDto;
+import jp.co.project.planets.earthly.webapp.util.RequestUtils;
 
 /**
  * login success handler
@@ -26,13 +24,14 @@ public class LoginSuccessHandler implements AuthenticationSuccessHandler {
     public void onAuthenticationSuccess(final HttpServletRequest request, final HttpServletResponse response,
             final Authentication authentication) throws IOException, ServletException {
         final var userInfoDto = (EarthlyUserInfoDto) authentication.getPrincipal();
-        final var session = request.getSession();
-        final var redirectUrl = Optional.ofNullable(
-                (DefaultSavedRequest) session.getAttribute("SPRING_SECURITY_SAVED_REQUEST")).map(v -> {
-                    final var builder = UriComponentsBuilder.fromPath(v.getRequestURI());
-                    v.getParameterMap().forEach(builder::queryParam);
-                    return builder.build().toString();
-                }).orElse(String.format("%s/users/%s", request.getContextPath(), userInfoDto.id()));
+        if (userInfoDto.tfa()) {
+            log.info("login success");
+            response.sendRedirect("%s/mfa".formatted(request.getContextPath()));
+            return;
+        }
+        final var redirectUrlOptional = RequestUtils.getSavedRequestRedirectUrl();
+        final var redirectUrl = redirectUrlOptional
+                .orElse(String.format("%s/users/%s", request.getContextPath(), userInfoDto.id()));
         log.info("login success");
         response.sendRedirect(redirectUrl);
     }
